@@ -1,5 +1,6 @@
 [B]Version 1.1.182[/B]
 - xhamster - restore playback with updated decryptor and additional manifest fallbacks
+- terebon - fix playback when iframe embeds are missing
 
 
 [B]Version 1.1.160[/B]
